feat: Updated Flair NER component